--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
       background: #f9f9f9;
     }
     header {
-      background-color: #0f172a;
       color: white;
-      padding: 40px 20px;
+      background: linear-gradient(rgba(15,23,42,0.6), rgba(15,23,42,0.6)), url('darren.jpg');
+      background-size: cover;
+      background-position: center;
       text-align: center;
     }
     header h1 {
